# Rocket

./: .gitignore  CODE_REVIEW.md  Developer_Implementation.txt  README.md  REVIEWER_RESPONSE.md  RLV_Developer_10.txt  convert_pdfs.py  debug_output.txt  debug_plot.py  debug_plot_v2.py  debug_sim.py  final_check_output.txt  generate_plots.py  generate_validation_plots.py  pyproject.toml  reproduce_issue.py  requirements-lock.txt  run_demo.py  run_simulation.py  test_full_sim.py  test_sim.py  verify_fix.py  verify_phase2.py  verify_trajectory.py
.claude/: settings.local.json
docs/: RLV_Developer_3.txt
rlv_sim/: __init__.py  abort.py  actuator.py  cli.py  config.py  constants.py  control.py  dynamics.py  earth.py  flex.py  forces.py  frames.py  guidance.py  integrators.py  main.py  mass.py  mission_manager.py  montecarlo.py  plotting.py  rcs.py  recovery.py  sensors.py  slosh.py  state.py  thermal.py  types.py  utils.py  validation.py
scripts/: __init__.py  analyze_diagnostics.py  check_results.py  check_torque.py  detailed_check.py  diagnose_gravity_turn.py  generate_plots.py  generate_plots_backup.py  generate_plots_test.py  mission_audit.py  plot_fork_results.py  plot_generator.py  quick_check.py  quick_gravity_check.py  run_mission_fork.py  s2_calc.py  s2_calc_v2.py  strict_recheck.py  test_gravity_turn_fix.py  validate_physics.py  verify_frr_physics.py  verify_gravity_turn_fix.py  verify_trajectory.py
tests/: __init__.py  golden_meco_checksum.npy  test_actuator.py  test_config.py  test_constants.py  test_control.py  test_dynamics.py  test_edge_cases.py  (+21 more)
(+1 files in other folders)
